// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimelineIndicator> renders as expected with interval, currentTime, and is not playing 1`] = `
<div
  className="time-indicator-container"
>
  <Draggable
    allowAnyClick={false}
    axis="x"
    bounds="parent"
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle=".time-indicator"
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    transform={null}
  >
    <div
      className="time-indicator"
    />
  </Draggable>
</div>
`;

exports[`<TimelineIndicator> renders as expected with interval, currentTime, and is playing 1`] = `
<div
  className="time-indicator-container"
>
  <Draggable
    allowAnyClick={false}
    axis="x"
    bounds="parent"
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle=".time-indicator"
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    transform={null}
  >
    <div
      className="time-indicator"
    />
  </Draggable>
</div>
`;

exports[`<TimelineIndicator> renders as expected with no interval, currentTime, and is not playing 1`] = `
<div
  className="time-indicator-container"
>
  <Draggable
    allowAnyClick={false}
    axis="x"
    bounds="parent"
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle=".time-indicator"
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    transform={null}
  >
    <div
      className="time-indicator"
    />
  </Draggable>
</div>
`;

exports[`<TimelineIndicator> renders as expected with no interval, currentTime, and is playing 1`] = `
<div
  className="time-indicator-container"
>
  <Draggable
    allowAnyClick={false}
    axis="x"
    bounds="parent"
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle=".time-indicator"
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    transform={null}
  >
    <div
      className="time-indicator"
    />
  </Draggable>
</div>
`;

exports[`<TimelineIndicator> renders as expected with no interval, initial currentTime, and is not playing 1`] = `
<div
  className="time-indicator-container"
>
  <Draggable
    allowAnyClick={false}
    axis="x"
    bounds="parent"
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle=".time-indicator"
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "x": -1,
        "y": 0,
      }
    }
    transform={null}
  >
    <div
      className="time-indicator"
    />
  </Draggable>
</div>
`;
